feat: Add Render.com deployment with automated scripts
Complete Render deployment infrastructure:
- render.yaml: Blueprint for all services (Python, Java, PostgreSQL)
- Dockerfile.java: Multi-stage build for Java resolver
- deploy.py: Automated deployment via Render API
- test_render.py: Comprehensive 10-test suite
- README.md: Complete deployment guide

Features:
✅ Automated deployment via API
✅ PostgreSQL telemetry database
✅ Parent node resolution support
✅ Health checks and monitoring
✅ Load testing included
✅ 1/month cost estimate

Services:
- Python admin (8050): Resolution + dashboard + API
- Java resolver (8054): High-performance resolution
- PostgreSQL: Shared telemetry storage

Ready to deploy with: python3 deployments/render/deploy.py